dont wrap fix status

--- a/gcp/appengine/frontend3/src/styles.scss
+++ b/gcp/appengine/frontend3/src/styles.scss
@@ -262,7 +262,8 @@ mwc-icon-button.mdc-data-table__sort-icon-button {
     padding-top: 16px;
     padding-bottom: 16px;
   }
-  .vuln-versions {
+  .vuln-versions,
+  .vuln-fix-status {
     white-space: nowrap;
   }
 
